--- a/templates/index.html
+++ b/templates/index.html
@@ -8,71 +8,77 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no">
 
-<meta name="description" content="Opis naszej strony">
-<meta name="keywords" content="Tutaj słowa kluczowe oddzielone przecinkiem">
+<meta name="description" content="Opis strony">
+<meta name="keywords" content="Tutaj słowa kluczowe ">
 
-<!--[if lt IE 9]>
-    <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-<![endif]-->
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/reset.css">
-<link rel="stylesheet" type="text/css" href="css/normalize.css">
+<link rel="stylesheet" type="text/css" href="templates/css/style.css">
+<link rel="stylesheet" type="text/css" href="templates/css/reset.css">
+<link rel="stylesheet" type="text/css" href="templates/css/normalize.css">
 
 <!-- Bootstrap -->
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="templates/bootstrap/css/bootstrap.css" rel="stylesheet">
 </head>
 <body>
-<div class="pre_header">
+<div id="pre_header">
 	<div class="pre_header_body">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-7 pull-left">
-					<img src="../images/t10.png" alt="Matlandia Junior">
+				<div class="col-lg-7 col-sm-12 col-xs-12 pull-left ">
+					<a href="#"><img src="images/t10.png" alt="Matlandia Junior"></a>
 				</div>
-				<div class="col-lg-5 pull-right">
+				<div class="col-lg-5 col-sm-12 col-xs-12 pull-right">
 					<div class="row">
-						<div class="col-lg-4"><a href="#">Wpisz Kod</a></div>
-						<div class="col-lg-4"><a href="#">Mój Dostęp</a></div>
-						<div class="col-lg-4 basket"><img src="../images/t22.png" /><a href="#">Koszyk</a></div>
+						<div class="col-lg-4 col-sm-4"><a href="#">Wpisz Kod</a></div>
+						<div class="col-lg-4 col-sm-4"><a href="#">Mój Dostęp</a></div>
+						<div class="col-lg-4 col-sm-4 basket"><img src="images/t22.png" alt="Matlandia Junior" /><a href="#">Koszyk</a></div>
 					</div>
-					<div class="row pull-right">
-						<div class="col-lg-6"><a href="#">Imię Nazwisko</a></div>
-						<div class="col-lg-6"><a href="#">(wyloguj)</a></div>
-					</div>
+				</div>
+			</div>
+			<div class="row text-right">
+				<div class="col-lg-12 col-sm-12 col-xs-12">
+					<div class="col-lg-11 col-sm-6"><a href="#" class="small-text">{{ user.name }} {{ user.surname }}</a></div> 
+					<div class="col-lg-1 col-sm-6"><a href="#" class="small-text">(wyloguj)</a></div>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
 	<div class="slider">
-	<img src="../images/1_slajd_1920x800.png" alt="Matlandia Junior" />
+		<div class="row">
+			<img src="images/1_slajd_1920x800.png" alt="Matlandia Junior" class="slider_img"/>
+			<a href="#"><img src="images/t12.png" alt="Matlandia Junior" class="slider_cloud"/></a>
+			<a href="#" class="icon-left"><img alt="Matlandia Junior" src="images/t23.png"></a>
+			<a href="#" class="icon-right"><img alt="Matlandia Junior" src="images/t23.png"></a>
+		</div>
 	</div>
 <div id="header">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<nav class="navbar" role="navigation">
+	<div class="body_header">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+					<nav class="navbar" role="navigation">
 
-					<div class="navbar-header">
-	                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-	                        <span class="sr-only">Toggle navigation</span>
-	                        <span class="icon-bar"></span>
-	                        <span class="icon-bar"></span>
-	                        <span class="icon-bar"></span>
-	                        <span class="icon-bar"></span>
-	                    </button>	
-	                </div>
+						<div class="navbar-header">
+		                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+		                        <span class="sr-only">Toggle navigation</span>
+		                        <span class="icon-bar"></span>
+		                        <span class="icon-bar"></span>
+		                        <span class="icon-bar"></span>
+		                        <span class="icon-bar"></span>
+		                    </button>	
+		                </div>
 
-					<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-						<ul class="nav nav-justified" id="navbar-full">
-							<li><img src="../images/t21.png" /></li>
-							<li>O programie</li>
-							<li>Zobacz program</li>
-							<li>Oferta</li>
-							<li>Nasze programy</li>
-						</ul>
-					</div>
-				</nav>
+						<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+							<ul class="nav nav-justified" id="navbar-full">
+								<li><a href="#pre_header"><img src="images/t21.png" alt="Matlandia Junior"/></a></li>
+								<li><a href="#zalety_programu">O programie</a></li>
+								<li><a href="#zobacz_program">Zobacz program</a></li>
+								<li><a href="#oferta">Oferta</a></li>
+								<li><a href="#nasze_programy">Nasze programy</a></li>
+							</ul>
+						</div>
+					</nav>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -91,7 +97,7 @@
 					<p class="program">Program będzie dostępny od września 2015 roku.</p>
 				</div>
 				<div class="col-md-4">
-					<img src="../images/t11.png" />
+					<img src="images/t11.png" alt="Matlandia Junior"/>
 				</div>
 			</div>
 		</div>
@@ -101,32 +107,32 @@
 	<div class="body-section">
 		<div class="container">
 			<div class="row text-center">
-				<div class="col-md-12">
+				<div class="col-md-12 col-xs-12">
 					<h1 class="head-title">Zalety programu</h1>
 				</div>
-				<div class="col-md-12">
-					<div class="col-md-4 box-zalety">
-						<img src="../images/t15.png" />
+				<div class="col-md-12 col-xs-12">
+					<div class="col-md-4 col-sm-6 box-zalety">
+						<img src="images/t15.png" alt="Matlandia Junior"/>
 						<p>100 animowanych <br/> zadań</p>
 					</div>
-					<div class="col-md-4 box-zalety">
-					<img src="../images/t16.png" />
+					<div class="col-md-4 col-sm-6 box-zalety">
+					<img src="images/t16.png" alt="Matlandia Junior"/>
 						<p>zadania <br/>o zróżnicowanym <br/> stopniu trudności</p>
 					</div>
-					<div class="col-md-4 box-zalety">
-						<img src="../images/t17.png" />
+					<div class="col-md-4 col-sm-6 box-zalety">
+						<img src="images/t17.png" alt="Matlandia Junior"/>
 						<p>zmienne dane <br/>w zadaniach</p>
 					</div>
-					<div class="col-md-4 box-zalety">
-					<img src="../images/t18.png" />
+					<div class="col-md-4 col-sm-6 box-zalety">
+					<img src="images/t18.png" alt="Matlandia Junior"/>
 						<p>czytane na głos <br/>polecenia</p>
 					</div>
-					<div class="col-md-4 box-zalety">
-						<img src="../images/t19.png" />
+					<div class="col-md-4 col-sm-6 box-zalety">
+						<img src="images/t19.png" alt="Matlandia Junior"/>
 						<p>motywujące <br/>komentarze <br/>bohaterów programu</p>
 					</div>
-					<div class="col-md-4 box-zalety">
-						<img src="../images/t20.png" />
+					<div class="col-md-4 col-sm-6 box-zalety">
+						<img src="images/t20.png" alt="Matlandia Junior"/>
 						<p>medale za <br/>wyniki</p>
 					</div>
 
@@ -139,11 +145,11 @@
 	<div class="body-section">
 		<div class="container">
 			<div class="row">
-			<div class="col-md-2">
-				<img src="../images/t14.png" />
+			<div class="col-md-2 col-xs-12">
+				<img src="images/t14.png" alt="Matlandia Junior"/>
 			</div>
-			<div class="col-md-10 arrow text-center">
-				<a href="#">Pobierz pełną listę działów i tematów</a>
+			<div class="col-md-10 col-xs-12 arrow text-center">
+				<a href="{{ application.sectionsListUrl }}">Pobierz pełną listę działów i tematów</a>
 			</div>
 			</div>
 		</div>
@@ -157,42 +163,42 @@
 					<h1 class="head-title">Zobacz program</h1>
 				</div>
 				<div class="col-md-12 zobacz-box">
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-6">
 						<a href="#">
-							<img src="../images/_automat.png" />
+							<img src="images/_automat.png" alt="Matlandia Junior"/>
 						</a>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-6">
 						<a href="#">
-							<img src="../images/_bobry.png" />
+							<img src="images/_bobry.png" alt="Matlandia Junior"/>
 						</a>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-6">
 						<a href="#">
-							<img src="../images/_pingwiny.png" />
+							<img src="images/_pingwiny.png" alt="Matlandia Junior"/>
 						</a>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-6">
 						<a href="#">
-							<img src="../images/_rakieta.png" />
+							<img src="images/_rakieta.png" alt="Matlandia Junior"/>
+						</a>
+					</div> 
+					<div class="col-md-4 col-sm-6">
+						<a href="#">
+							<img src="images/_śnieg.png" alt="Matlandia Junior"/>
 						</a>
 					</div>
-					<div class="col-md-4">
+					<div class="col-md-4 col-sm-6">
 						<a href="#">
-							<img src="../images/_śnieg.png" />
-						</a>
-					</div>
-					<div class="col-md-4">
-						<a href="#">
-							<img src="../images/_zegar.png" />
+							<img src="images/_zegar.png" alt="Matlandia Junior"/>
 						</a>
 					</div>
 				</div>
 				<div class="col-md-12 zobacz-bottom">
-					<div class="col-md-8">
-						<img src="../images/t9.png" class="pull-right"/>
+					<div class="col-md-8 col-sm-8 col-xs-12">
+						<a href="{{ application.demoUrl }}" ><img src="images/t9.png" alt="Matlandia Junior" class="pull-right"/></a>
 					</div>
-					<div class="col-md-4 text-zobacz">
+					<div class="col-md-4 col-sm-4 col-xs-12 text-zobacz">
 						<p>możliwość <br/> rozwiązywania xx zadań</p>
 					</div>
 				</div>
@@ -227,125 +233,23 @@
 				<div class="col-md-12 text-center">
 					<h1 class="head-title">Nasze programy</h1>
 				</div>
-				<div>
+				<div class="col-md-12">
 					<div class="row">
-						<div class="col-md-4">
+						{% for ourApps in otherApps %}
+						<div class="col-md-4 col-sm-6 col-xs-12 nasz_programy_box">
 							<div class="program-item">
-								<img src="../images/apps/product_zajeciakomputerowe.png" />
+								<img src="{{ ourApps.image }}" alt="Matlandia Junior"/>
 								<div class="content">
-									<h3><em>Zajęcia komputerowe</em></h3>
-									<p class="subtitle">edukacja wczesnoszkolna, klasy 1-3</p>
-									<p class="text">Każda część Zajęć komputerowych zawiera ponad 100 animowanych zadań z obsługi komputera oraz edukacji polonistycznej i matematycznje. Poprzez zabawę uczą się sprawnie operować myszką komputerową oraz ćwiczą bezwzrokowe pisanie na klawiaturze.</p>
-									<div class="text-right">
-										<a href="#" class="text">zobacz więcej <span class="arrow">&#10095;</span></a>
+									<h3><em>{{ ourApps.name }}</em></h3>
+									<p class="subtitle">{{ ourApps.tags }}</p>
+									<p class="text">{{ ourApps.description }}</p>
+									<div class="see-button">
+										<a href="{{ ourApps.showMoreUrl }}" class="text">zobacz więcej <span class="arrow">&#10095;</span></a>
 									</div>
 								</div>
 							</div>
 						</div>
-						<div class="col-md-4">
-							<div class="program-item">
-								<img src="../images/apps/product_multipodreczniki.png" />
-								<div class="content">
-									<h3><em>Zajęcia komputerowe</em></h3>
-									<p class="subtitle">edukacja wczesnoszkolna, klasy 1-3</p>
-									<p class="text">Każda część Zajęć komputerowych zawiera ponad 100 animowanych zadań z obsługi komputera oraz edukacji polonistycznej i matematycznje. Poprzez zabawę uczą się sprawnie operować myszką komputerową oraz ćwiczą bezwzrokowe pisanie na klawiaturze.</p>
-									<div class="text-right">
-										<a href="#" class="text">zobacz więcej <span class="arrow">&#10095;</span></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="program-item">
-								<img src="../images/apps/product_kompozytor.png" />
-								<div class="content">
-									<h3><em>Zajęcia komputerowe</em></h3>
-									<p class="subtitle">edukacja wczesnoszkolna, klasy 1-3</p>
-									<p class="text">Każda część Zajęć komputerowych zawiera ponad 100 animowanych zadań z obsługi komputera oraz edukacji polonistycznej i matematycznje. Poprzez zabawę uczą się sprawnie operować myszką komputerową oraz ćwiczą bezwzrokowe pisanie na klawiaturze.</p>
-									<div class="text-right">
-										<a href="#" class="text">zobacz więcej <span class="arrow">&#10095;</span></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="program-item">
-								<img src="../images/apps/product_matlandia.png" />
-								<div class="content">
-									<h3><em>Zajęcia komputerowe</em></h3>
-									<p class="subtitle">edukacja wczesnoszkolna, klasy 1-3</p>
-									<p class="text">Każda część Zajęć komputerowych zawiera ponad 100 animowanych zadań z obsługi komputera oraz edukacji polonistycznej i matematycznje. Poprzez zabawę uczą się sprawnie operować myszką komputerową oraz ćwiczą bezwzrokowe pisanie na klawiaturze.</p>
-									<div class="text-right">
-										<a href="#" class="text">zobacz więcej <span class="arrow">&#10095;</span></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="program-item">
-								<img src="../images/apps/product_wladcyslow.png" />
-								<div class="content">
-									<h3><em>Zajęcia komputerowe</em></h3>
-									<p class="subtitle">edukacja wczesnoszkolna, klasy 1-3</p>
-									<p class="text">Każda część Zajęć komputerowych zawiera ponad 100 animowanych zadań z obsługi komputera oraz edukacji polonistycznej i matematycznje. Poprzez zabawę uczą się sprawnie operować myszką komputerową oraz ćwiczą bezwzrokowe pisanie na klawiaturze.</p>
-									<div class="text-right">
-										<a href="#" class="text">zobacz więcej <span class="arrow">&#10095;</span></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="program-item">
-								<img src="../images/apps/product_histlandia.png" />
-								<div class="content">
-									<h3><em>Zajęcia komputerowe</em></h3>
-									<p class="subtitle">edukacja wczesnoszkolna, klasy 1-3</p>
-									<p class="text">Każda część Zajęć komputerowych zawiera ponad 100 animowanych zadań z obsługi komputera oraz edukacji polonistycznej i matematycznje. Poprzez zabawę uczą się sprawnie operować myszką komputerową oraz ćwiczą bezwzrokowe pisanie na klawiaturze.</p>
-									<div class="text-right">
-										<a href="#" class="text">zobacz więcej <span class="arrow">&#10095;</span></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="program-item">
-								<img src="../images/apps/product_powtorkomat.png" />
-								<div class="content">
-									<h3><em>Zajęcia komputerowe</em></h3>
-									<p class="subtitle">edukacja wczesnoszkolna, klasy 1-3</p>
-									<p class="text">Każda część Zajęć komputerowych zawiera ponad 100 animowanych zadań z obsługi komputera oraz edukacji polonistycznej i matematycznje. Poprzez zabawę uczą się sprawnie operować myszką komputerową oraz ćwiczą bezwzrokowe pisanie na klawiaturze.</p>
-									<div class="text-right">
-										<a href="#" class="text">zobacz więcej <span class="arrow">&#10095;</span></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="program-item">
-								<img src="../images/apps/product_imperiumrzymskie.png" />
-								<div class="content">
-									<h3><em>Zajęcia komputerowe</em></h3>
-									<p class="subtitle">edukacja wczesnoszkolna, klasy 1-3</p>
-									<p class="text">Każda część Zajęć komputerowych zawiera ponad 100 animowanych zadań z obsługi komputera oraz edukacji polonistycznej i matematycznje. Poprzez zabawę uczą się sprawnie operować myszką komputerową oraz ćwiczą bezwzrokowe pisanie na klawiaturze.</p>
-									<div class="text-right">
-										<a href="#" class="text">zobacz więcej <span class="arrow">&#10095;</span></a>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-md-4">
-							<div class="program-item">
-								<img src="../images/apps/product_panstwopolskie.png" />
-								<div class="content">
-									<h3><em>Zajęcia komputerowe</em></h3>
-									<p class="subtitle">edukacja wczesnoszkolna, klasy 1-3</p>
-									<p class="text">Każda część Zajęć komputerowych zawiera ponad 100 animowanych zadań z obsługi komputera oraz edukacji polonistycznej i matematycznje. Poprzez zabawę uczą się sprawnie operować myszką komputerową oraz ćwiczą bezwzrokowe pisanie na klawiaturze.</p>
-									<div class="text-right">
-										<a href="#" class="text">zobacz więcej <span class="arrow">&#10095;</span></a>
-									</div>
-								</div>
-							</div>
-						</div>
+						{% endfor %}
 					</div>
 				</div>
 			</div>
@@ -357,41 +261,41 @@
 		<div class="container">
 			<div class="row text-center">
 				<div class="col-md-12">
-					<div class="col-md-8">
-						<div class="col-md-2">
+					<div class="col-md-8 col-sm-6 col-xs-12">
+						<div class="col-md-2 col-sm-6">
 							<a href="#">
-								<img src="../images/1_i.png" />
+								<img src="images/1_i.png" alt="Matlandia Junior"/>
 								<p>Pomoc</p>
 							</a>
 						</div>
-						<div class="col-md-2">
+						<div class="col-md-2 col-sm-6">
 							<a href="#">
-								<img src="../images/2_i.png" />
+								<img src="images/2_i.png" alt="Matlandia Junior" />
 								<p>Kontakt</p>
 							</a>
 						</div>
-						<div class="col-md-2">
+						<div class="col-md-2 col-sm-6">
 							<a href="#">
-								<img src="../images/3_i.png" />
+								<img src="images/3_i.png" alt="Matlandia Junior"/>
 								<p>Regulamin</p>
 							</a>
 						</div>
-						<div class="col-md-2">
+						<div class="col-md-2 col-sm-6">
 							<a href="#">
-								<img src="../images/4_i.png" />
+								<img src="images/4_i.png" alt="Matlandia Junior"/>
 								<p>Zespół</p>
 							</a>
 						</div>
-						<div class="col-md-2">
+						<div class="col-md-2 col-sm-6">
 							<a href="#">
-								<img src="../images/5_i.png" />
+								<img src="images/5_i.png" alt="Matlandia Junior"/>
 								<p>Wymagania systemowe</p>
 							</a>
 						</div>
 					</div>
-					<div class="col-md-4 pull-right facebook">
+					<div class="col-md-4 col-sm-6  col-xs-12 pull-right facebook">
 						<a href="#">
-							<img src="../images/23.png" /> 
+							<img src="images/23.png" alt="Matlandia Junior"/> 
 							GWO na Facebooku
 						</a>
 					</div>
@@ -411,8 +315,10 @@
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="bootstrap/js/bootstrap.min.js"></script>
+    <script src="templates/bootstrap/js/bootstrap.min.js"></script>
     <!--less-->
-    <script src="less.js" type="text/javascript"></script>
+    <script src="templates/less.js" type="text/javascript"></script>
+    <!-- my js -->
+    <script src="templates/js.js" type="text/javascript"></script>
 </body>
 </html>
